# IELTS_LMS

./: .env.example  .gitignore  .tsbuildinfo  Dockerfile.frontend  RAILWAY_DEPLOYMENT.md  README.md  index.html  package-lock.json  playwright.config.ts  railway.frontend.json  vite.config.ts
backend/: .env.example  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  railway.json
backend/crates/api/: Cargo.toml
backend/crates/api/src/: lib.rs  live_updates.rs  main.rs  router.rs  state.rs
backend/crates/application/: Cargo.toml
backend/crates/application/src/: auth.rs  builder.rs  delivery.rs  grading.rs  lib.rs  library.rs  media.rs  proctoring.rs  results.rs  scheduling.rs
backend/crates/domain/: Cargo.toml
backend/crates/infrastructure/: Cargo.toml
backend/crates/worker/: Cargo.toml
backend/docs/: operations.md  task-11-readiness-evidence.md
backend/migrations/: 0001_roles.sql  0002_rls_helpers.sql  0003_exam_core.sql  0004_library_and_defaults.sql  0005_scheduling_and_access.sql  0006_delivery.sql  0007_proctoring.sql  0008_grading_results.sql  0009_media_cache_outbox.sql  0010_auth_security.sql  0011_outbox_notify_trigger.sql  0012_registration_fields.sql
backend/scripts/: backup-rehearsal.sh  dev-db-bootstrap.sh  load-test.js
backend/tests/contracts/: auth_contract.rs  builder_contract.rs  grading_contract.rs  proctor_contract.rs  scheduling_contract.rs  student_contract.rs
backend/tests/integration/: idempotency_smoke.rs  mutation_replay.rs  outbox_smoke.rs  rls_smoke.rs
backend/tests/support/: fixtures.rs  mod.rs  postgres.rs
(+146 files in other folders)
