[workspace]
members = [
  "crates/api",
  "crates/application",
  "crates/domain",
  "crates/infrastructure",
  "crates/worker",
]
default-members = [
  "crates/api",
  "crates/application",
  "crates/domain",
  "crates/infrastructure",
  "crates/worker",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[workspace.dependencies]
# Pin home to a version compatible with Rust 1.85
home = "0.5.9"
